--- a/login.html
+++ b/login.html
@@ -1,4 +1,4 @@
- <html lang="en">
+<html lang="en">
 
   <head>
     <meta charset="UTF-8" />
@@ -7,6 +7,7 @@
     <title>Voyagers | Home</title>
     <link rel="stylesheet" href="login.css">
   </head>
+
   <body>
     <header class="header">
       <nav class="navbar">
@@ -23,36 +24,29 @@
       </nav>
     </header>
     <!-- enter your code here -->
-    <center><table border="1"><tr><td><form action="action_page.php"
-              method="post">
-              <div class="imgcontainer">
-                <center> <img src="sign.png" width="200" height="200"></center><br
-              </div>
+    <div class="formDiv">
+      <div class="div1">
+        <img src="">
+      </div>
+      <div class="div2">
+        <form action="action_page.php" method="post">
+          <div class="logindetail">
+            <img class="icon" src="https://img.icons8.com/external-kiranshastry-lineal-kiranshastry/50/000000/external-email-interface-kiranshastry-lineal-kiranshastry-1.png"/>
+            <input type="text" placeholder="Email" name="uname"required>
+          </div>
+          <div class="logindetail">
+            <img class="icon" src="https://img.icons8.com/windows/50/000000/key.png" />
+            <input type="password" placeholder="Password" name="psw"required>
+          </div>
+          <button type="submit">Login</button>
+          <label><input type="checkbox" checked="checked" name="remember">Remember me</label>
 
-              <div class="container">&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
-                &nbsp
-                <label for="uname"><b>Username</b></label>
-                <input type="text" placeholder="Enter Username" name="uname"
-                  required> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp<br><br>
-                &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
-                <label for="psw"><b>Password</b></label>
-                <input type="password" placeholder="Enter Password" name="psw"
-                  required>
-                &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp<br><br>
-                <center>
-                  <button type="submit">Login</button>
-                  <label>
-                    <input type="checkbox" checked="checked" name="remember">
-                    Remember me<br>
-                  </label></center>
-              </div>
-
-              <div class="container" style="background-color:#f1f1f1">
-                <center>
-                  <button type="button" class="cancelbtn">Cancel</button>
-                  <span class="psw">Forgot <a href="#">password?</a></span></center>
-              </div>
-            </form></td></tr> </table></center>
+          <div class="container">
+            <span class="psw">Forgot <a href="#">password?</a></span>
+          </div>
+        </form>
+      </div>
+    </div>
   </body>
 
 </html>
