--- a/home.html
+++ b/home.html
@@ -1,197 +1,185 @@
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Voyagers | Home</title>
-        <link rel="stylesheet" href="homestyle.css" />
-    </head>
 
-    <body>
-        <header class="header">
-            <nav class="navbar">
-                <ul class="nav-items">
-                    <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
-                </ul>
-                <a class="nav-brand" href="index.html">Voyagers</a>
-                <ul class="nav-items item-right">
-                    <li class="nav-item"><a class="nav-link" href="login.html">Log In</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Sign Up</a></li>
-                </ul>
-            </nav>
-        </header>
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Voyagers | Home</title>
+    <link rel="stylesheet" href="homestyle.css" />
+    <link rel="icon" href="https://img.icons8.com/ios/50/ffffff/marker-v.png">
+</head>
 
-        <section class="section-1">
-            <div class="s1">
-                <div class="homeHeading"><h1>INTRO</h1></div>
-                <div class="feature-text">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                    Repellendus
-                    libero commodi beatae error, adipisci odio officia eum
-                    voluptatem ut
-                    unde impedit provident fuga rem, atque cupiditate ad
-                    aliquid. Dolorem,
-                    repudiandae? Lorem ipsum dolor sit amet consectetur
-                    adipisicing elit.
-                    Maiores voluptatibus impedit possimus natus, eaque, rerum
-                    similique
-                    pariatur magni nemo amet consequuntur quas, esse fuga omnis
-                    eveniet
-                    harum ullam placeat dolorum. Eos ratione nemo amet
-                    dignissimos
-                    eligendi. Quam, blanditiis. Consequatur, corporis.
-                </div>
-            </div>
-        </section>
-        <section class="section-2">
-            <div class="homeHeading"><h1>Popular places</h1></div>
-            <div class="s2">
-                <div class="recent-visits">
-                    <a href="goa.html">
-                        <div>
-                            <img src="images/beachHD.jpg" alt=""
-                                class="recent-visits-img" />
-                        </div>
-                        <div>
-                            <span>Goa</span>
-                        </div>
-                    </a>
-                </div>
-                <div class="recent-visits">
-                    <a href="jaipur.html">
-                        <div>
-                            <img src="images/hawa mahal-1.jpg" alt=""
-                                class="recent-visits-img" />
-                        </div>
-                        <div>
-                            <span>Jaipur</span>
-                        </div>
-                    </a>
-                </div>
-                <div class="recent-visits">
-                    <div>
-                        <img src="images/pexels.jpg" alt=""
-                            class="recent-visits-img" />
-                    </div>
-                    <div>
-                        <span>New Delhi</span>
-                    </div>
-                </div>
-                <div class="recent-visits">
-                    <div>
-                        <img src="images/pexels.jpg" alt=""
-                            class="recent-visits-img" />
-                    </div>
-                    <div>
-                        <span>Amritsar</span>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section class="section-3">
+<body>
+    <header class="header">
+        <nav class="navbar">
+            <ul class="nav-items">
+                <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+            </ul>
+            <a class="nav-brand" href="index.html">Voyagers</a>
+            <ul class="nav-items item-right">
+                <li class="nav-item"><a class="nav-link" href="login.html">Log In</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Sign Up</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section class="section-1">
+        <div class="s1">
             <div class="homeHeading">
-                <h2>Recent Blogs</h2>
+                <h1>LIFE IS A JOURNEY, NOT A DESTINATION</h1>
             </div>
-            <div class="s-3">
+            <div class="feature-text">
+                Ralph Waldo Emerson. Who likes a boring life? we humans are the most advanced species in the entire
+                world ; each day of the life is meant to be lived as a adventurous day. The voyagers was made by
+                travelling enthusiasts , who based on their experiences will help you to select the best city to travel
+                , so that you can have the best time of your life witnessing the cool breezes in goa or majestic forts
+                of Rajasthan!!!
+            </div>
+        </div>
+    </section>
+    <section class="section-2">
+        <div class="homeHeading">
+            <h1>POPULAR PLACES</h1>
+        </div>
+        <div class="s2">
+            <div class="recent-visits">
                 <a href="goa.html">
-                    <div class="recent-blogs" id="recent-blog-1">
-                        <div class="r-blog-img">
-                            <img src="images/2.jpg" alt="" class="scene">
-                        </div>
-                        <div class="r-blog-head-text">
-                            <h1 class='blog-head'>A guide to visit the majestic Dudhsagar waterfalls in Goa</h1>
-                            <p>
-                                In the last few years, the Dudhsagar waterfalls have become a popular weekend destination, especially for those
-                                travelling from cities like Mumbai, Pune and Bangalore (all thanks to a certain Bollywood movie). Most tourists
-                                to Goa these days make the Dudhsagar waterfalls a part of their itinerary for Goa.
-                            </p>
-                        </div>           
+                    <div>
+                        <img src="images/beachHD.jpg" alt="" class="recent-visits-img" />
+                    </div>
+                    <div>
+                        <span>Goa</span>
                     </div>
                 </a>
-                </div>
-                <br>
+            </div>
+            <div class="recent-visits">
                 <a href="jaipur.html">
-                    <div class="recent-blogs" id="recent-blog-2">
-                        <div class="r-blog-head-text">
-                            <h1 class='blog-head'>Jaipur - The Pink City</h1>
-                            <p>Jaipur is the capital of India's Rajasthan state. It evokes the royal family that once ruled
-                                the region and that, in 1727, founded what is now called the Old City, or “Pink City” for its
-                                trademark building color.  The city of Jaipur is one of India's architectural wonders. It 
-                                houses some of the country's most ornate royal palaces -- elaborate structures designed 
-                                hundreds of years ago that still captivate visitors today.</p>
-                        </div>
-                        <div class="r-blog-img">
-                            <img src="images/jaipur-1.jpg" alt="" class="scene">
-                        </div>
+                    <div>
+                        <img src="images/hawa mahal-1.jpg" alt="" class="recent-visits-img" />
+                    </div>
+                    <div>
+                        <span>Jaipur</span>
                     </div>
                 </a>
-                <br>
-                <div class="recent-blogs" id="recent-blog-3">
-                    <div class="r-blog-img">
-                        <img src="images/scene-4.jpg" alt="" class="scene">
-                    </div>
-                    <div class="r-blog-head-text">
-                        <h1 class='blog-head'>Lorem ipsum dolor sit ametuaerat?</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing
-                            elit. Fuga labor Lorem ipsum dolor sit amet
-                            consectetur adipisicing elit. Odio dolore
-                            s perferendis illo distinctio assumenda aspernatur,
-                            doloremque minus similique dolore nobis? um libero
-                            enim saepe! Unde
-                            consequuntur, nulla doloribus accusamus praesentium
-                            doloremque.</p>
-                    </div>
+            </div>
+            <div class="recent-visits">
+                <div>
+                    <img src="images/Delhi.jpg" alt="" class="recent-visits-img" />
                 </div>
-                <br>
-                <div class="recent-blogs" id="recent-blog-4">
-                    <div class="r-blog-head-text">
-                        <h1 class='blog-head'>Lorem ipsum dolor elit. Eos,
-                            quaerat?</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing
-                            elit. Fuga laborum Lorem ipsum dolor sit amet
-                            consectetur adipisicing elit.
-                            Ab sint obcaecati asperiores optio natus odio
-                            explicabo soluta! Quas, aliquam totam?libero enim
-                            saepe! Unde
-                            consequuntur, nulla doloribus accusamus praesentium
-                            doloremque.</p>
-                    </div>
-                    <div class="r-blog-img">
-                        <img src="images/scene-5.jpg" alt="" class="scene">
-                    </div>
+                <div>
+                    <span>New Delhi</span>
                 </div>
             </div>
-        </section>
-        <footer class="footer">
-            <div class="footer-content-left">
-                <ul class="footer-items">
-                    <li class="footer-heading">Contributors</li>
-                    <li class="footer-item">
-                        <a
-                            class="footer-link"
-                            target="_blank"
-                            href="https://www.instagram.com/amit.fiend/">Amit</a>
-                    </li>
-                    <li class="footer-item">
-                        <a class="footer-link" target="_blank" href="#">Aaryan</a>
-                    </li>
-                    <li class="footer-item">
-                        <a class="footer-link" target="_blank" href="#">AakashDeep</a>
-                    </li>
-                    <li class="footer-item">
-                        <a class="footer-link" target="_blank" href="#">Abhinav</a>
-                    </li>
-                </ul>
+            <div class="recent-visits">
+                <div>
+                    <img src="images/Amritsar.jpg" alt="" class="recent-visits-img" />
+                </div>
+                <div>
+                    <span>Amritsar</span>
+                </div>
             </div>
-            <div class="footer-content-right">
-                <p class="footer-right-text">
-                    We wanted to make a project that incorporates everything we were taught in college as of yet as
-                    well as what we know of our own.
-                    This travel webpage uses a plethora of html and css functions to perfectly showcase our
-                    knowledge on the suject.
-                </p>
+        </div>
+    </section>
+    <section class="section-3">
+        <div class="homeHeading">
+            <h2>RECENT BLOGS</h2>
+        </div>
+        <div class="s-3">
+            <a href="goa.html">
+                <div class="recent-blogs" id="recent-blog-1">
+                    <div class="r-blog-img">
+                        <img src="images/2.jpg" alt="" class="scene">
+                    </div>
+                    <div class="r-blog-head-text">
+                        <h1 class='blog-head'>A guide to visit the majestic Dudhsagar waterfalls in Goa</h1>
+                        <p>
+                            In the last few years, the Dudhsagar waterfalls have become a popular weekend destination,
+                            especially for those
+                            travelling from cities like Mumbai, Pune and Bangalore (all thanks to a certain Bollywood
+                            movie). Most tourists
+                            to Goa these days make the Dudhsagar waterfalls a part of their itinerary for Goa.
+                        </p>
+                    </div>
+                </div>
+            </a>
+        </div>
+        <br>
+        <a href="jaipur.html">
+            <div class="recent-blogs" id="recent-blog-2">
+                <div class="r-blog-head-text">
+                    <h1 class='blog-head'>Jaipur - The Pink City</h1>
+                    <p>Jaipur is the capital of India's Rajasthan state. It evokes the royal family that once ruled
+                        the region and that, in 1727, founded what is now called the Old City, or “Pink City” for its
+                        trademark building color. The city of Jaipur is one of India's architectural wonders. It
+                        houses some of the country's most ornate royal palaces -- elaborate structures designed
+                        hundreds of years ago that still captivate visitors today.</p>
+                </div>
+                <div class="r-blog-img">
+                    <img src="images/jaipur-1.jpg" alt="" class="scene">
+                </div>
             </div>
-        </footer>
-    </body>
+        </a>
+        <br>
+        <div class="recent-blogs" id="recent-blog-3">
+            <div class="r-blog-img">
+                <img src="images/Delhi-1.jfif" alt="" class="scene">
+            </div>
+            <div class="r-blog-head-text">
+                <h1 class='blog-head'>Dilwalon Ki Dilli</h1>
+                <p>From Delhi's Chandni Chowk to India Gate, the Delhi Blog is a place where you'll find
+                    all the hidden gems and tourist places to plan a perfect trip to Delhi, India's
+                    capital. The capital city is brimming with historical monuments, UNESCO World
+                    Heritage sites, cafes, bars, a lit nightlife and delicious street food. Explore
+                    the narrow lanes of Old Delhi, soak in the old world charm of Qutub Minar, and go
+                    on a food trail in the scanty lanes of Chandni Chowk.</p>
+            </div>
+        </div>
+        <br>
+        <div class="recent-blogs" id="recent-blog-4">
+            <div class="r-blog-head-text">
+                <h1 class='blog-head'>Getting Around Amritsar</h1>
+                <p>The largest city in Punjab is probably most well-known as the home to the holiest shrine
+                    of Sikhism — the spectacular Golden Temple. It's well worth spending some time exploring
+                    the sprawling complex, but don't stop there. Amritsar isn't just about sacred sites
+                    The holy city is also a must-stop street food destination, and home to plenty of museums,
+                    forts, and bustling bazaars and markets. Get better acquainted and feel like a local before
+                    you go with our complete guide to Amritsar.</p>
+            </div>
+            <div class="r-blog-img">
+                <img src="images/Amritsar-1.jpg" alt="" class="scene">
+            </div>
+        </div>
+        </div>
+    </section>
+    <footer class="footer">
+        <div class="footer-content-left">
+            <ul class="footer-items">
+                <li class="footer-heading">Contributors</li>
+                <li class="footer-item">
+                    <a class="footer-link" target="_blank" href="https://www.instagram.com/amit.fiend/">Amit Kumar Singh</a>
+                </li>
+                <li class="footer-item">
+                    <a class="footer-link" target="_blank"
+                        href="https://www.instagram.com/a.a.r.y.a.n.5.4.3/">Aaryan Singh</a>
+                </li>
+                <li class="footer-item">
+                    <a class="footer-link" target="_blank" href="https://www.instagram.com/aakashsedha/">AakashDeep Sedha</a>
+                </li>
+                <li class="footer-item">
+                    <a class="footer-link" target="_blank" href="https://www.instagram.com/abhinav_02.08_/">Abhinav Gupta</a>
+                </li>
+            </ul>
+        </div>
+        <div class="footer-content-right">
+            <p class="footer-right-text">
+                We wanted to make a project that incorporates everything we were taught in college as of yet as
+                well as what we know of our own.
+                This travel webpage uses a plethora of html and css functions to perfectly showcase our
+                knowledge on the subject.
+            </p>
+        </div>
+    </footer>
+</body>
+
 </html>
