--- a/login.html
+++ b/login.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Voyagers | Home</title>
+    <title>Voyagers | Login</title>
+    <link rel="icon" href="https://img.icons8.com/ios/50/ffffff/marker-v.png">
     <link rel="stylesheet" href="login.css">
   </head>
 
@@ -13,7 +14,7 @@
       <nav class="navbar">
         <ul class="nav-items">
           <li class="nav-item"><a class="nav-link" href="home.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+          <li class="nav-item"><a class="nav-link" href="feedback.html">Contact</a></li>
         </ul>
         <a class="nav-brand" href="index.html">Voyagers</a>
         <ul class="nav-items item-right">
@@ -26,7 +27,7 @@
     <!-- enter your code here -->
     <div class="formDiv">
       <div class="div1">
-        <img src="">
+        <img src="sign.png">
       </div>
       <div class="div2">
         <form action="action_page.php" method="post">
@@ -39,11 +40,11 @@
             <input type="password" placeholder="Password" name="psw"required>
           </div>
           <button type="submit">Login</button>
-          <label><input type="checkbox" checked="checked" name="remember">Remember me</label>
+          <!-- <label><input type="checkbox" checked="checked" name="remember">Remember me</label> -->
 
-          <div class="container">
+          <!-- <div class="container">
             <span class="psw">Forgot <a href="#">password?</a></span>
-          </div>
+          </div> -->
         </form>
       </div>
     </div>
