--- a/feedback.html
+++ b/feedback.html
@@ -1,16 +1,39 @@
-<label>Your Name</label><br>
-<input type="text" class="btn"><br>
-<label>Your Email</label>&nbsp <br> 
-<input type="text" class="btn"><br>
-<label>Your Phone</label><br>
-<input type="text" class="btn"><br>
-<label>Subject</label>&nbsp &nbsp &nbsp &nbsp <br>
-<input type="text" class="btn"><br>
-<label>Feedback</label>&nbsp &nbsp &nbsp
-<br>
-<textarea rows="10" style="width:700px;"></textarea><br>
-<br>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Voyagers | Contact</title>
+    <link rel="stylesheet" href="feedback.css" />
+    <link rel="icon" href="https://img.icons8.com/ios/50/ffffff/marker-v.png">
+  </head>
+  <body>
+    <header class="header">
+        <nav class="navbar">
+            <ul class="nav-items">
+                <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+            </ul>
+            <a class="nav-brand" href="index.html">Voyagers</a>
+            <ul class="nav-items item-right">
+                <li class="nav-item"><a class="nav-link" href="login.html">Log In</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Sign Up</a></li>
+            </ul>
+        </nav>
+    </header>
+    <label>Your Name</label><br />
+    <input type="text" class="btn" /><br />
+    <label>Your Email</label>&nbsp <br />
+    <input type="text" class="btn" /><br />
+    <label>Your Phone</label><br />
+    <input type="text" class="btn" /><br />
+    <label>Subject</label>&nbsp &nbsp &nbsp &nbsp <br />
+    <input type="text" class="btn" /><br />
+    <label>Feedback</label>&nbsp &nbsp &nbsp
+    <br />
+    <textarea rows="10" style="width: 700px"></textarea><br />
+    <br />
 
-<input type="submit" value="Send Now" class="btn2"><br>
-
- 
+    <input type="submit" value="Send Now" class="btn2" /><br />
+  </body>
+</html>
