--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="https://img.icons8.com/ios/50/ffffff/marker-v.png">
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
@@ -18,23 +19,29 @@
     <header class="header">
       <nav class="navbar">
         <ul class="nav-items">
-          <li class="nav-item"><a class="nav-link" href="home.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+          <li class="nav-item">
+            <a class="nav-link" href="home.html">Home</a>
+          </li>
+          <li class="nav-item"><a class="nav-link" href="feedback.html">Contact</a></li>
         </ul>
         <a class="nav-brand" href="#">Voyagers</a>
         <ul class="nav-items item-right">
-          <li class="nav-item"><a class="nav-link" href="#">Log In</a></li>
+          <li class="nav-item">
+            <a class="nav-link" href="login.html">Log In</a>
+          </li>
           <li class="nav-item"><a class="nav-link" href="#">Sign Up</a></li>
         </ul>
       </nav>
-     
+
       <div class="hero">
         <div class="heading">
           <h1 class="heading-primary">
             EXPERIENCE THE BEAUTY OF <span class="india">इंडिया</span> WITH US
           </h1>
-          <h3 class="heading-secondary">DARE TO LIVE THE LIFE YOU'VE ALWAYS WANTED</h3>
-          <a class="button-primary" href="#"
+          <h3 class="heading-secondary">
+            DARE TO LIVE THE LIFE YOU'VE ALWAYS WANTED
+          </h3>
+          <a class="button-primary" href="home.html"
             >EXPLORE MORE <span class="right-arrow">&#8594;</span></a
           >
         </div>
@@ -86,19 +93,27 @@
       <div class="footer-content-left">
         <ul class="footer-items">
           <li class="footer-heading">Contributors</li>
-          <li class="footer-item"><a class="footer-link" target="_blank" href="https://www.instagram.com/amit.fiend/">Amit</a></li>
-          <li class="footer-item"><a class="footer-link" target="_blank" href="#">Aaryan</a></li>
-          <li class="footer-item"><a class="footer-link" target="_blank" href="#">AakashDeep</a></li>
-          <li class="footer-item"><a class="footer-link" target="_blank" href="#">Abhinav</a></li>
+          <li class="footer-item">
+              <a class="footer-link" target="_blank" href="https://www.instagram.com/amit.fiend/">Amit Kumar Singh</a>
+          </li>
+          <li class="footer-item">
+              <a class="footer-link" target="_blank"
+                  href="https://www.instagram.com/a.a.r.y.a.n.5.4.3/">Aaryan Singh</a>
+          </li>
+          <li class="footer-item">
+              <a class="footer-link" target="_blank" href="https://www.instagram.com/aakashsedha/">AakashDeep Sedha</a>
+          </li>
+          <li class="footer-item">
+              <a class="footer-link" target="_blank" href="https://www.instagram.com/abhinav_02.08_/">Abhinav Gupta</a>
+          </li>
         </ul>
       </div>
       <div class="footer-content-right">
-
         <p class="footer-right-text">
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi id
           aspernatur eos sequi exercitationem illo deleniti. Rem odio, dicta
-          repellendus facere illum beatae facilis voluptatum reiciendis voluptatem
-          quisquam ducimus voluptatibus.
+          repellendus facere illum beatae facilis voluptatum reiciendis
+          voluptatem quisquam ducimus voluptatibus.
         </p>
       </div>
     </footer>
@@ -112,22 +127,22 @@
       //     icon.src = "images/moon.png"
       //   }
       // })
-      const header = document.querySelector(".header");
-      const navbar = document.querySelector(".navbar");
-      const stickyNav = function (entries) {
-        const [entry] = entries;
-        if (!entry.isIntersecting) {
-          navbar.style.backgroundColor = "#0f0f0d";
-        }
-        if (entry.isIntersecting) {
-          navbar.style.backgroundColor = "transparent";
-        }
-      };
-      const observer = new IntersectionObserver(stickyNav, {
-        root: null,
-        threshold: 0.1,
-      });
-      observer.observe(header);
+      // const header = document.querySelector(".header");
+      // const navbar = document.querySelector(".navbar");
+      // const stickyNav = function (entries) {
+      //   const [entry] = entries;
+      //   if (!entry.isIntersecting) {
+      //     navbar.style.backgroundColor = "#0f0f0d";
+      //   }
+      //   if (entry.isIntersecting) {
+      //     navbar.style.backgroundColor = "transparent";
+      //   }
+      // };
+      // const observer = new IntersectionObserver(stickyNav, {
+      //   root: null,
+      //   threshold: 0.1,
+      // });
+      // observer.observe(header);
     </script>
   </body>
 </html>
