--- a/goa.html
+++ b/goa.html
@@ -14,12 +14,12 @@
             <nav class="navbar">
                 <ul class="nav-items">
                     <li class="nav-item"><a class="nav-link" href="home.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="feedback.css">Contact</a></li>
                 </ul>
-                <a class="nav-brand" href="#">Voyagers</a>
+                <a class="nav-brand" href="index.html">Voyagers</a>
                 <ul class="nav-items item-right">
                     <!-- <img src="images/moon.png" id="dark-mode" /> -->
-                    <li class="nav-item"><a class="nav-link" href="#">Log In</a></li>
+                    <li class="nav-item"><a class="nav-link" href="login.html">Log In</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Sign Up</a></li>
                 </ul>
             </nav>
