--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
         <a class="nav-brand" href="index.html">Voyagers</a>
         <ul class="nav-items item-right">
           <!-- <img src="images/moon.png" id="dark-mode" /> -->
-          <li class="nav-item"><a class="nav-link" href="#">Log In</a></li>
+          <li class="nav-item"><a class="nav-link" href="login.html">Log In</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Sign Up</a></li>
         </ul>
       </nav>
