--- a/jaipur.html
+++ b/jaipur.html
@@ -29,11 +29,11 @@
         <nav class="navbar">
             <ul class="nav-items">
                 <li class="nav-item"><a class="nav-link" href="home.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="">Contact</a></li>
+                <li class="nav-item"><a class="nav-link" href="feedback.html">Contact</a></li>
             </ul>
-            <a class="nav-brand" href="#">Voyagers</a>
+            <a class="nav-brand" href="index.html">Voyagers</a>
             <ul class="nav-items item-right">
-                <li class="nav-item"><a class="nav-link" href="#">Log In</a></li>
+                <li class="nav-item"><a class="nav-link" href="login.html">Log In</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Sign Up</a></li>
             </ul>
         </nav>
