--- a/jaipur.html
+++ b/jaipur.html
@@ -9,6 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Travel | Jaipur | Blogs</title>
+    <link rel="icon" href="https://img.icons8.com/ios/50/ffffff/marker-v.png">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,17 +24,16 @@
 <!-- <link rel="stylesheet" href="homestylejaipur.css"> -->
 <link rel='stylesheet' href="jaipur_style.css">
 </head>
-<body>
-    
+<body>  
     <header class="header">
         <nav class="navbar">
             <ul class="nav-items">
                 <li class="nav-item"><a class="nav-link" href="home.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+                <li class="nav-item"><a class="nav-link" href="feedback.html">Contact</a></li>
             </ul>
-            <a class="nav-brand" href="#">Voyagers</a>
+            <a class="nav-brand" href="index.html">Voyagers</a>
             <ul class="nav-items item-right">
-                <li class="nav-item"><a class="nav-link" href="#">Log In</a></li>
+                <li class="nav-item"><a class="nav-link" href="login.html">Log In</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Sign Up</a></li>
             </ul>
         </nav>
@@ -497,10 +497,19 @@ The carved magic flower at the base is known for showing seven pictures in one. 
         <div class="footer-content-left">
           <ul class="footer-items">
             <li class="footer-heading">Contributors</li>
-            <li class="footer-item"><a class="footer-link" target="_blank" href="https://www.instagram.com/amit.fiend/">Amit</a></li>
-            <li class="footer-item"><a class="footer-link" target="_blank" href="#">Aaryan</a></li>
-            <li class="footer-item"><a class="footer-link" target="_blank" href="#">AakashDeep</a></li>
-            <li class="footer-item"><a class="footer-link" target="_blank" href="#">Abhinav</a></li>
+            <li class="footer-item">
+                <a class="footer-link" target="_blank" href="https://www.instagram.com/amit.fiend/">Amit Kumar Singh</a>
+            </li>
+            <li class="footer-item">
+                <a class="footer-link" target="_blank"
+                    href="https://www.instagram.com/a.a.r.y.a.n.5.4.3/">Aaryan Singh</a>
+            </li>
+            <li class="footer-item">
+                <a class="footer-link" target="_blank" href="https://www.instagram.com/aakashsedha/">AakashDeep Sedha</a>
+            </li>
+            <li class="footer-item">
+                <a class="footer-link" target="_blank" href="https://www.instagram.com/abhinav_02.08_/">Abhinav Gupta</a>
+            </li>
           </ul>
         </div>
         <div class="footer-content-right">
